finish part 1